# redis-naming-py

./: .gitignore  MANIFEST  Pipfile  README.md  setup.cfg  setup.py
redisnaming/: __init__.py
tests/: test_naming.py
