[metadata]
name = redisnaming
version = 1.0.1
description = Provide the function to build key and value on the naming convention that proposed by the Redis documentation.
author = Sho Minagawa
author_email = msh5.global@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = http://github.com/msh5/redis-naming-py

[options]
packages=redisnaming
